# auto-loader

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  rust-toolchain.toml  sv_gmod_integration_auto_update.lua
 .github/workflows/: build_release.yml
.github/workflows/: build_and_release.yml
crates/loader/: Cargo.toml  load.sh
crates/loader/src/: lib.rs
crates/real/: Cargo.toml
crates/real/src/: lib.rs
src/: lib.rs
