[package]
name = "gmod-integration"
version = "0.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
gmod = "17.0.0"
