[package]
name = "gmod_integration_loader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gmod = { version = "17.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.5"
libloading = "0.7"
reqwest = { version = "0.11",default-features = false,features = ["blocking","json","rustls-tls"] }
