[package]
name = "gmod_integration_loader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gmod = { version = "17.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.5"
libloading = "0.7"

# Use static linking for reqwest
reqwest = {     version = "0.11",    default-features = false,    features = [        "blocking",        "json",         "rustls-tls",        "rustls-tls-native-roots"    ]}

chrono = {     version = "0.4",     default-features = false,    features = ["alloc", "std", "clock"]}
[target.'cfg(target_env = "musl")'.dependencies]
# Additional static linking for musl
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
# Optimize for size and static linking
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
