[package]
name = "gmod-integration"
version = "0.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gmod = { version = "17.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

reqwest = { version = "0.11",default-features = false,features = ["blocking","json","rustls-tls"] }
chrono = { version = "0.4", features = ["alloc", "std"] }